--- a/src/components/Home/MainProducts/MainProducts.module.sass
+++ b/src/components/Home/MainProducts/MainProducts.module.sass
@@ -2,25 +2,29 @@
     & > h3
         text-align: center
         font-size: 3rem
+
     &__grid
         display: grid
         width: 100%
         grid-template-columns: repeat(2, 1fr)
         grid-template-rows: 400px 400px
+
         & > article
             position: relative
-            z-index: 1
             min-height: 400px
-        & > img
-            height: 400px
-            opacity: 0.4
-            object-fit: cover
-        & > p
-            position: absolute
-            top: 0
-            right: 1.5rem
-            z-index: 2
-            font-size: 1.5rem
-            font-weight: 700
-            max-width: 300px
-            text-align: right
+
+            &__img
+                height: 400px
+                opacity: 0.4
+                object-fit: cover
+                z-index: 0 // Aquí se asegura de que la imagen esté detrás del texto
+
+            & > p
+                position: absolute
+                top: 0
+                right: 1.5rem
+                z-index: 2 // Asegura que el texto esté por delante de la imagen
+                font-size: 1.5rem
+                font-weight: 700
+                max-width: 300px
+                text-align: right
